# donut-snake

./: .gitignore  README.md  main.py  requirements.txt
donut_snake/: LoadAndTest_class.py  爬股價.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
