[package]
name = "donut-snake"
version = "1.0.0"
description = "Donut Snake"
authors = ["you"]
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "donut_snake_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
